# FandFPMIF

./: .dockerignore  .gitignore  INSTRUCTIONS.md  Makefile  README.md  compose.dev.yml  docker-compose.yml  how to add new module.txt  init instructions.md  instructions.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/api/: .env  Dockerfile  README.md  alembic.ini  dev.db  main.py  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_event_log_metadata_and_edits.py
apps/api/core/: config.py  database.py  dependencies.py
apps/api/data/: metadata.db
apps/api/data/event_logs/019dee6a-2091-7594-a550-957ae2cd258a/: cases.parquet  events.parquet  meta.json  original.csv
apps/api/data/module_results/019dedff-5603-793a-8fc0-e300a666936f/discovery/: heuristics_net__a2869e5c.json  petri_net_alpha.json  petri_net_inductive.json  process_tree.json
apps/api/data/module_results/019dee6a-2091-7594-a550-957ae2cd258a/discovery/: dfg.json  (+2 more)
apps/api/migrations/: env.py
apps/api/migrations/versions/: 01b7686b1c41_initial_process_and_module_tables.py
apps/api/models/: process.py
apps/api/modules/: base.py  registry.py
apps/api/modules/builtin/analytics/: module.py
apps/api/modules/builtin/bpmn_importer/: module.py
apps/api/modules/builtin/event_log_importer/: module.py
apps/api/modules/builtin/simulation/: module.py
apps/api/routers/: dashboard.py  modules.py  processes.py
apps/api/schemas/: graph.py  process.py
apps/api/services/: graph_service.py
apps/api/src/flows_funds/api/: __init__.py  ai_config.py  cli.py  config.py  main.py  uuid7.py
apps/api/tests/: conftest.py  test_event_log_data.py  test_health.py  test_ingest.py  test_jobs.py  test_module_install.py  test_modules_loader.py
apps/api/tests/fixtures/: sample.xes
modules/cv4cdd/: .gitignore  README.md  cv4cdd_core.py  manifest.yaml  module.py  original README.md  pyproject.toml
modules/cv4cdd/approaches/object_detection/utils/: config.py  prediction.py  preprocessing.py  utilities.py
modules/cv4cdd/model/: .gitignore
modules/cv4cdd/panel/: index.tsx  queries.ts
(+240 files in other folders)
