[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flows-funds-api"
version = "0.1.0"
description = "FastAPI backend for the Flows & Funds process analysis platform."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "aiosqlite>=0.20",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13",
    "duckdb>=1.1",
    "pyarrow>=17.0",
    "pandas>=2.2",
    "pm4py>=2.7",
    "lxml>=5.2",
    "python-multipart>=0.0.12",
    "structlog>=24.1",
    "aiofiles>=24.1",
    "flows-funds-sdk",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
    "pyright>=1.1.380",
]

[project.scripts]
flows-funds-api = "flows_funds.api.cli:main"

[tool.uv.sources]
flows-funds-sdk = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/flows_funds"]

[tool.hatch.build.targets.sdist]
include = ["src/flows_funds"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources.*",
]
